--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
         // JW Player Setup
         jwplayer("jwplayerDiv").setup({
-            file: "<iframe src="https://me.webcric.com/hindi.htm" width="100%" height="500px" frameborder="0" allowfullscreen></iframe>",
+            file: "https://live.tsports.com/mobile_hls/tsports_live_2/index.m3u8",
             autostart: true,
             width: "100%",
             height: "100%",
