--- a/index.html
+++ b/index.html
@@ -195,19 +195,19 @@
             }, 500);
         }, 1000);
 
-        // Close Second Popup
-        function closePopup() {
-            document.getElementById("customPopup").style.display = "none";
-        }
-
-        // JW Player Setup
-        jwplayer("jwplayerDiv").setup({
-            file: "https://live.tsports.com/mobile_hls/tsports_live_2/index.m3u8",
-            autostart: true,
-            width: "100%",
-            height: "100%",
-            stretching: "uniform"
-        });
+              // Fetch JSON and Load JW Player
+        fetch("https://raw.githubusercontent.com/StmpupCricket/T-Sports-json/refs/heads/main/data.json") // Replace with actual hosted JSON URL
+            .then(response => response.json())
+            .then(data => {
+                jwplayer("jwplayerDiv").setup({
+                    file: data.stream_url,
+                    autostart: true,
+                    width: "100%",
+                    height: "100%",
+                    stretching: "uniform"
+                });
+            })
+            .catch(error => console.error("Error loading JSON:", error));
     </script>
 
 </body>
