--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
+     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G7N84VYY9V"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -195,7 +195,11 @@
             }, 500);
         }, 1000);
 
-              // Fetch JSON and Load JW Player
+        // Close Second Popup
+        function closePopup() {
+            document.getElementById("customPopup").style.display = "none";
+        }
+      // Fetch JSON and Load JW Player
         fetch("https://raw.githubusercontent.com/StmpupCricket/T-Sports-json/refs/heads/main/data.json") // Replace with actual hosted JSON URL
             .then(response => response.json())
             .then(data => {
